force-app/main/default/objects/Attorney_Fee_Split__c/Attorney_Fee_Split__c.object-meta.xml
<CustomObject>
    <label>Attorney Fee Split</label>
    <nameField>
        <displayFormat>AFS-{0000}</displayFormat>
        <label>Attorney Fee Split Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attorney Fee Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>