force-app/main/default/objects/Attorney_Fee_Split__c/fields/Outside_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Outside_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Attorney</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Settlement_Fee_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>