force-app/main/default/objects/Attorney_Fee_Split__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipName>Settlement_Fee_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>