force-app/main/default/objects/Attorney_Fee_Split__c/recordTypes/Inside_Counsel.recordType-meta.xml
<RecordType>
    <fullName>Inside_Counsel</fullName>
    <active>true</active>
    <label>Inside Counsel</label>
</RecordType>