force-app/main/default/objects/Attorney_Fee_Split__c/recordTypes/Outside_Counsel.recordType-meta.xml
<RecordType>
    <fullName>Outside_Counsel</fullName>
    <active>true</active>
    <label>Outside Counsel</label>
</RecordType>